--- a/src/components/Meme.css
+++ b/src/components/Meme.css
@@ -1,6 +1,22 @@
-img {
+.meme {
   height: 300px;
   width: 300px;
   padding-top: 20px;
-  object-fit: cover;
+  border: 1px solid black;
+  background-size: cover;
+  position: relative;
+}
+
+.top {
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.bottom {
+  position: absolute;
+  bottom: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
